# MrRay

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  Notes.txt  README.md  UntitledRayTracer.sln
Renders/: 01.pbm  fordenoise_denoised.tif
UntitledRayTracer/: UntitledRayTracer.vcxproj  UntitledRayTracer.vcxproj.filters
UntitledRayTracer/src/: AABB.h  AARect.cpp  AARect.h  BVHNode.cpp  BVHNode.h  Camera.h  Colour.cpp  Dialectric.h  DiffuseLight.h  Disk.h  Hittable.h  HittableList.cpp  HittableList.h  Lambertian.h  Main.cpp  Material.h  Mesh.cpp  Mesh.h  Metal.h  ONB.h  Ray.h  Sphere.cpp  Sphere.h  Texture.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h  Vec3.h  rtutils.h
src/: AABB.cpp  AABB.h  AARect.cpp  AARect.h  BVHNode.cpp  BVHNode.h  CMakeLists.txt  Camera.h  Colour.cpp  Colour.h  Dialectric.h  DiffuseLight.h  Disk.cpp  Hittable.h  HittableList.cpp  Main.cpp  Material.h  Mesh.cpp  Mesh.h  PDF.h  Transform.h  Triangle.h  Vec3.h  film.cpp  film.h  memory.h  renderEngine.cpp  renderEngine.h  rtutils.h  sampler.h  scene.cpp  scene.h  timer.cpp  timer.h
src/geom/: AARect.cpp  AARect.h  BVHNode.cpp  BVHNode.h  CMakeLists.txt  Disk.cpp  Disk.h  Hittable.h  HittableList.cpp  HittableList.h  Mesh.cpp  Mesh.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h
src/hdMrRay/: CMakeLists.txt  config.cpp  config.h  mesh.cpp  mesh.h  plugInfo.json  renderBuffer.cpp  renderBuffer.h  renderDelegate.cpp  renderDelegate.h  renderParam.h  renderPass.cpp  renderPass.h  renderer.cpp  renderer.h  rendererPlugin.cpp  rendererPlugin.h
src/hdray/: CMakeLists.txt  mesh.cpp  mesh.h  plugInfo.json  renderBuffer.cpp  renderBuffer.h  renderDelegate.cpp  renderDelegate.h  renderParam.h  renderPass.cpp  renderPass.h  renderer.cpp  renderer.h  rendererPlugin.cpp  rendererPlugin.h
src/include/mrRay/: Colour.h  ONB.h  PDF.h  Ray.h  aabb.h  camera.h  film.h  matrix.h  memory.h  namespace.h  onb.h  pdf.h  ray.h  renderEngine.h  rtStbImage.h  rtutils.h  sampler.h  scene.h  timer.h  vec3.h
src/include/mrRay/geom/: AARect.h  BVHNode.h  Disk.h  Hittable.h  HittableList.h  Sphere.h  Transform.h  Triangle.h  aaRect.h  bvhNode.h  disk.h  hittable.h  hittableList.h  mesh.h  meshLoader.h  sphere.h  transform.h  triangle.h
src/include/mrRay/material/: Material.h  material.h  texture.h
src/include/ray/: AABB.h  Camera.h  Colour.h  ONB.h  PDF.h  Ray.h  Vec3.h  film.h  matrix.h  memory.h  namespace.h  renderEngine.h  rt_stb_image.h  rtutils.h  sampler.h  scene.h  timer.h
src/include/ray/geom/: AARect.h  BVHNode.h  Disk.h  Hittable.h  HittableList.h  Mesh.h  Sphere.h  Transform.h  Triangle.h  mesh.h  meshLoader.h
src/include/ray/material/: Material.h  Texture.h
src/librayengine/: AABB.cpp  CMakeLists.txt  Colour.cpp  film.cpp  renderEngine.cpp  scene.cpp  timer.cpp
src/librayengine/geom/: AARect.cpp  BVHNode.cpp  CMakeLists.txt  Disk.cpp  HittableList.cpp  Mesh.cpp  Sphere.cpp  Transform.cpp  Triangle.cpp  mesh.cpp  meshLoader.cpp
src/librayengine/material/: Texture.cpp
src/material/: CMakeLists.txt  Dialectric.h  DiffuseLight.h  Lambertian.h  Material.h  Metal.h  Texture.cpp  Texture.h
src/mrRayDemo/: CMakeLists.txt  demo.cpp
src/mrRayEngine/: AABB.cpp  CMakeLists.txt  Colour.cpp  aabb.cpp  film.cpp  renderEngine.cpp  scene.cpp  timer.cpp
src/mrRayEngine/geom/: AARect.cpp  BVHNode.cpp  CMakeLists.txt  Disk.cpp  HittableList.cpp  Sphere.cpp  Transform.cpp  Triangle.cpp  aaRect.cpp  bvhNode.cpp  disk.cpp  hittableList.cpp  mesh.cpp  meshLoader.cpp  sphere.cpp  transform.cpp  triangle.cpp
src/mrRayEngine/material/: CMakeLists.txt  Texture.cpp  texture.cpp
src/ray/: CMakeLists.txt  ray.cpp
