target_sources(ray 
    PRIVATE 
        AABB.cpp
        AABB.h
        Camera.h
        Colour.cpp
        Colour.h
        Main.cpp
        memory.h
        ONB.h
        PDF.h
        scene.h
        scene.cpp
        timer.h
        timer.cpp
        Ray.h
        rt_stb_image.h
        rtutils.h
        Vec3.h
)

add_subdirectory(geom)
add_subdirectory(material)
